objects/blng__InvoiceScheduler__c.object
<CustomObject>
    <customHelpPage>blng__InvoiceSchedulerHelp</customHelpPage>
    <fields>
        <fullName>blng__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__AutomaticallyPostInvoices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatically Post Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__BillUsageCharges__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Bill Usage Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__IncludeAllCurrencies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include All Currencies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceBatches__c</fullName>
        <label>Invoice Batch</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InvoiceBatch</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__InvoiceDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__InvoiceDayOfMonth__c</fullName>
        <label>Invoice Day Of Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__DayOfMonth</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__InvoiceDayOfWeek__c</fullName>
        <label>Invoice Day Of Week</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__DayOfWeek</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>blng__TargetDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__TargetDayOfMonth__c</fullName>
        <label>Target Day Of Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__DayOfMonth</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__TargetDayOfWeek__c</fullName>
        <label>Target Day Of Week</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__DayOfWeek</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Type__c</fullName>
        <description>Type of Schedule.
Once - Billing will be done only one time.
Daily - Billing will be repeated continuously daily and so on</description>
        <inlineHelpText>Type of Schedule.
Once - Billing will be done only one time.
Daily - Billing will be repeated continuously daily and so on</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__SchedulerType</valueSetName>
        </valueSet>
    </fields>
    <label>Invoice Scheduler</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice Scheduler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Schedulers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>